sidebar overflow style fix

--- a/webroot/css/admin.less
+++ b/webroot/css/admin.less
@@ -62,11 +62,12 @@ body.sidebar .pusher > .cake-debug-output {
 
 #sidebar {
 
+  z-index: 9999;
+
   .be-sidebar {
+    overflow-x: hidden;
     .box-shadow(-3px -5px 13px #333);
   }
-
-  z-index: 9999;
 }
 
 #page {
